--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="WCC Infra Pvt Ltd - Expert in Infrastructure, Civil Engineering, Road Construction, Trenchless Technology, Pipeline Installation & Scrapworker Services. Trusted for quality, innovation, and sustainability."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -35,21 +35,15 @@
     <link rel="stylesheet" href="assets/css/responsive.css" />
 
     <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    <title>React App</title>
+    <title>
+      WCC Infra Pvt Ltd | Infrastructure, Road Construction, Trenchless
+      Technology & Scrapworker Services
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
     <script src="assets/js/vendor/jquery-1.11.2.min.js"></script>
     <script src="assets/js/vendor/bootstrap.min.js"></script>
 
@@ -58,7 +52,7 @@
     <script src="assets/js/jquery.easing.1.3.js"></script>
     <script src="assets/js/jquery.masonry.min.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script> -->
     <script src="http://maps.google.com/maps/api/js"></script>
     <script src="assets/js/gmaps.min.js"></script>
 
