fix: update index.html title and meta tags for better SEO; enhance AboutWithVideo component content and accessibility

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>WCC Infra- OnePage Bootstrap Template</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+  <title>WCC Infra — Infrastructure & Construction</title>
+  <meta name="description" content="WCC Infra Private Limited — specialists in water pipeline systems, road & highway construction, and industrial & civil infrastructure across India." />
+  <meta name="keywords" content="WCC Infra, infrastructure, construction, pipelines, roads, civil engineering, India" />
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
