fix: enhance SEO and metadata in index.html; add geo tags and mobile app capabilities

--- a/index.html
+++ b/index.html
@@ -3,15 +3,50 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>WCC Infra — Infrastructure & Construction</title>
-  <meta name="description" content="WCC Infra Private Limited — specialists in water pipeline systems, road & highway construction, and industrial & civil infrastructure across India." />
-  <meta name="keywords" content="WCC Infra, infrastructure, construction, pipelines, roads, civil engineering, India" />
+    <title>WCC Infra — Infrastructure & Construction | Water Pipeline & Road Construction Specialists</title>
+    
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="WCC Infra — Infrastructure & Construction | Water Pipeline & Road Construction Specialists" />
+    <meta name="description" content="WCC Infra Private Limited — specialists in water pipeline systems, road & highway construction, and industrial & civil infrastructure across India. Expert engineering and construction services with proven project delivery." />
+    <meta name="keywords" content="WCC Infra, infrastructure construction, water pipeline projects, road construction, highway construction, civil engineering, industrial construction, infrastructure development, construction company India, engineering services, Ghaziabad" />
+    <meta name="author" content="WCC Infra Private Limited" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wccinfra.com/" />
+    <meta property="og:title" content="WCC Infra — Infrastructure & Construction Specialists" />
+    <meta property="og:description" content="Leading infrastructure company specializing in water pipeline systems, road construction, and industrial development projects across India." />
+    <meta property="og:image" content="https://wccinfra.com/assets/img/about.jpg" />
+    <meta property="og:site_name" content="WCC Infra" />
+    <meta property="og:locale" content="en_IN" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://wccinfra.com/" />
+    <meta property="twitter:title" content="WCC Infra — Infrastructure & Construction Specialists" />
+    <meta property="twitter:description" content="Leading infrastructure company specializing in water pipeline systems, road construction, and industrial development projects across India." />
+    <meta property="twitter:image" content="https://wccinfra.com/assets/img/about.jpg" />
+
+    <!-- Geo Tags -->
+    <meta name="geo.region" content="IN-UP" />
+    <meta name="geo.placename" content="Ghaziabad" />
+    <meta name="geo.position" content="28.6692;77.4538" />
+    <meta name="ICBM" content="28.6692, 77.4538" />
+
+    <!-- Mobile App Capable -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection" content="telephone=no" />
+    
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#0B2B3C" />
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
-
-    <!-- Fonts -->
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />    <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
     <link
