fix: update index.html and package files; streamline script imports and enhance vendor initialization

--- a/index.html
+++ b/index.html
@@ -145,13 +145,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/js/main.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
+  <!-- Vendor & theme scripts are imported and bundled by Vite via src/vendor-init.js -->
   </body>
 </html>
